# py-discression

./: .gitignore  LICENSE.txt  README.rst  setup.cfg
discression/: __init__.py  _utils.py  redaction.py
tests/: test__utils.py  test_redaction.py
