[metadata]
name = discretion
version = attr: discretion.__version__
author = Steve Jorgensen
author_email = stevecjor@gmail.com
# description = ...
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# keywords = ...
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Security
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
#   Typing :: Typed

[options]
# zip_safe =
# include_package_data =
# packages = find:
# python_requires = >=m.n
# install_requires =

[tool:pytest]
testpaths =
    tests
pythonpath = .
